Apr 28, 2011 - chris ---------------------------------------------------
o bugfix: when ham_open[_ex] or ham_env_open[_ex] return HAM_NEED_RECOVERY
    these functions deleted the logfiles by mistake. Fixed, and added
    a unittest to avoid regressions

Apr 27, 2011 - chris ---------------------------------------------------
o bugfix: after SMOs which affect the root page (i.e. a new root page is
    created) the header page is sometimes not written to the log file. This 
	can cause data loss after recovery (Thanks, Mark)

Apr 15, 2011 - chris ---------------------------------------------------
o bugfix: the cache was not purged correctly, thus grew uncontrolled
    (Thanks, Mark)

Mar 31, 2011 - chris ---------------------------------------------------
o bugfix: the hamzilla server always failed to read the configuration file 
    because of a wrong error check (Thanks, Sebastien)

Mar 28, 2011 - chris ---------------------------------------------------
o bugfix: when opening a database, and recovery is enabled, the 'threshold' 
    of the log files (which decides about the log file switching) was not 
    initialized correctly. (Thanks, Jake Sloan)

Feb 03, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.9

Feb 02, 2011 - chris ---------------------------------------------------
o added hamsterdb.spec to generate RPM files (thanks, John Gunkel)

Jan 28, 2011 - chris ---------------------------------------------------
o linux 64bit: when having long-running transactions with very big 
    databases (200 GB), and the working set of mmapped memory gets too big,
    mmap will fail and return ENOMEM. In this case, hamsterdb now falls
    back to malloc/read.

Jan 25, 2011 - chris ---------------------------------------------------
o merged bugfix from branch bleeding_edge: on 64bit windows, the remote
    handles returned by the server were broken
